--- a/madera/madera/Views/ChoicePlan.xaml
+++ b/madera/madera/Views/ChoicePlan.xaml
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="madera.Views.ChoicePlan">
+             x:Class="madera.Views.ChoicePlan"
+             BackgroundColor="White">
     <ContentPage.Content>
-        <StackLayout x:Name="btn_sols">
+        <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
+            <Label Text="Choix d'un plan de maison"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+            <Frame BackgroundColor="#BF043055" HasShadow="False">
+                <StackLayout Orientation="Vertical" Spacing="10" x:Name="btn_sols">
+                </StackLayout>
+            </Frame>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
