--- a/madera/madera/Views/CreateUser.xaml
+++ b/madera/madera/Views/CreateUser.xaml
@@ -1,25 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="madera.Views.CreateUser">
+             x:Class="madera.Views.CreateUser"
+             BackgroundColor="White">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Nom" />
-            <Entry x:Name="entry_nom" Placeholder="Nom" />
-
-            <Label Text="Prénom" />
-            <Entry x:Name="entry_prenom" Placeholder="Prénom" />
-
-            <Label Text="Téléphone" />
-            <Entry x:Name="entry_telephone" Placeholder="Téléphone" />
-
-            <Label Text="Mail" />
-            <Entry x:Name="entry_mail" Placeholder="Mail" />
-
-            <Label Text="Adresse" />
-            <Entry x:Name="entry_adresse" Placeholder="Adresse" />
-
-            <Button x:Name="btn_create_user" Text="Valider la création" Clicked="validate_user" />
+        <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
+            <Label Text="Création d'un utilisateur"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+            <Frame BackgroundColor="#BF043055" HasShadow="False">
+                <StackLayout Orientation="Vertical" Spacing="10">
+                    <Entry x:Name="entry_nom" Placeholder="Nom"   
+                           PlaceholderColor="White" HeightRequest="50"
+                           TextColor="White"/>
+                    <Entry x:Name="entry_prenom" Placeholder="Prénom"   
+                           PlaceholderColor="White" HeightRequest="50"   
+                           IsPassword="True"  
+                           TextColor="White"/>
+                    <Entry x:Name="entry_telephone" Placeholder="Téléphone"   
+                           PlaceholderColor="White" HeightRequest="50"
+                           TextColor="White"/>
+                    <Entry x:Name="entry_mail" Placeholder="Email"   
+                           PlaceholderColor="White" HeightRequest="50"   
+                           IsPassword="True"  
+                           TextColor="White"/>
+                    <Entry x:Name="entry_adresse" Placeholder="Adresse"   
+                           PlaceholderColor="White" HeightRequest="50"
+                           TextColor="White"/>
+                </StackLayout>
+            </Frame>
+            <Button x:Name="Btn_validate_user" Text="Valider" TextColor="White"  
+                    FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
+                    BackgroundColor="#BF043055" Clicked="validate_user" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
