--- a/madera/madera/Views/SelectUser.xaml
+++ b/madera/madera/Views/SelectUser.xaml
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="madera.Views.SelectUser">
+             x:Class="madera.Views.SelectUser"
+             BackgroundColor="White">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
+        <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
+            <Label Text="Choix d'un utilisateur"
                 VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-            <Button x:Name="btn_user_1" Text="Utilisateur 1" Clicked="select_user" />
-            <Button x:Name="btn_user_2" Text="Utilisateur 2" Clicked="select_user" />
-            <Button x:Name="btn_user_3" Text="Utilisateur 3" Clicked="select_user" />
-            <Button x:Name="btn_user_4" Text="Utilisateur 4" Clicked="select_user" />
+                HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
+            <Frame BackgroundColor="#BF043055" HasShadow="False">
+                <StackLayout Orientation="Vertical" Spacing="10" x:Name="btn_users">
+                </StackLayout>
+            </Frame>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
