--- a/madera/madera/Views/CreateClient.xaml
+++ b/madera/madera/Views/CreateClient.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="madera.Views.CreateUser"
+             x:Class="madera.Views.CreateClient"
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
@@ -15,14 +15,12 @@
                            TextColor="White"/>
                     <Entry x:Name="entry_prenom" Placeholder="Prénom"   
                            PlaceholderColor="White" HeightRequest="50"   
-                           IsPassword="True"  
                            TextColor="White"/>
                     <Entry x:Name="entry_telephone" Placeholder="Téléphone"   
                            PlaceholderColor="White" HeightRequest="50"
                            TextColor="White"/>
                     <Entry x:Name="entry_mail" Placeholder="Email"   
                            PlaceholderColor="White" HeightRequest="50"   
-                           IsPassword="True"  
                            TextColor="White"/>
                     <Entry x:Name="entry_adresse" Placeholder="Adresse"   
                            PlaceholderColor="White" HeightRequest="50"
@@ -31,7 +29,7 @@
             </Frame>
             <Button x:Name="Btn_validate_user" Text="Valider" TextColor="White"  
                     FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
-                    BackgroundColor="#BF043055" Clicked="validate_user" />
+                    BackgroundColor="#BF043055" Clicked="validate_client" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
