--- a/madera/madera/Views/GestClient.xaml
+++ b/madera/madera/Views/GestClient.xaml
@@ -1,21 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="madera.Views.GestUser"
+             x:Class="madera.Views.GestClient"
              BackgroundColor="White">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
             <BoxView HeightRequest="10"/>
-            <Image HorizontalOptions="Center" WidthRequest="300" Source="logo.jpg"/>
+            <Image HorizontalOptions="Center" WidthRequest="300" Source="logo.png"/>
             <Label Text="Gestion de l'utilisateur"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" TextColor="Black" FontSize="24" />
-            <Button x:Name="btn_create_user" Text="Créer un utilisateur" TextColor="White"  
+            <Button x:Name="btn_create_user" Text="Créer un client" TextColor="White"  
                     FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
-                    BackgroundColor="#BF043055" Clicked="create_user" />
-            <Button x:Name="btn_choice_user" Text="Choisir un utilisateur" TextColor="White"  
+                    BackgroundColor="#BF043055" Clicked="create_client" />
+            <Button x:Name="btn_choice_user" Text="Choisir un client" TextColor="White"  
                     FontAttributes="Bold" FontSize="Large" HorizontalOptions="FillAndExpand"  
-                    BackgroundColor="#BF043055" Clicked="choice_user" />
+                    BackgroundColor="#BF043055" Clicked="choice_client" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
