Liste des modules associes a un devis.

--- a/madera/madera/Views/ViewDevisPlan.xaml
+++ b/madera/madera/Views/ViewDevisPlan.xaml
@@ -4,5 +4,9 @@
              x:Class="madera.Views.ViewDevisPlan">
   <!--Pages can be added as references or inline-->
     <ContentPage Title="Plan" />
-    <ContentPage Title="Devis" />
+    <ContentPage Title="Devis">
+  
+        <Label x:Name="contenu_devis" Text="" />
+
+    </ContentPage>
 </TabbedPage>
