Liste des items IHM devis en cours (bugué)

--- a/madera/madera/Views/ViewDevisPlan.xaml
+++ b/madera/madera/Views/ViewDevisPlan.xaml
@@ -77,16 +77,16 @@
 
                     <Frame Grid.Row="0">
                         <Grid>
-                            <Button x:Name="sauvegarde" Text="Sauvegarder"   Grid.Column="0" />
+                            <Button x:Name="sauvegarde" Text="Sauvegarder" Grid.Column="0" />
                             <Button x:Name="synchroniser" Text="Synchroniser" Grid.Column="1" />
                             <Label Text="Devis gnah gnah"  Grid.Column="2" />
-                            <Button x:Name="email" Text="Email" Grid.Column="3" />
+                            <Button x:Name="actualiser" Text="Actualiser" Grid.Column="3" Clicked ="actualisation" />
+                            <Button x:Name="email" Text="Email" Grid.Column="4" />
+
                         </Grid>
                     </Frame>
 
-                    <BoxView BackgroundColor="AliceBlue" Grid.Row="1"/>
                     <StackLayout x:Name="listeDevis" Grid.Row="1">
-
                     </StackLayout>
                 </Grid>
             </Grid>
